2008-07-17  Petr Ovtchenkov  <complement@users.sourceforge.net>

	src/details/fstream_unistd.cpp: fix bug #2001222, opening with
	ios_base::app should rewind write pointer to the end of the file;
	fix treatment of ios_base::ate (it should rewind pointer
	to the end of the file once) and ios_base::app (offset will be set
	to the end of the file prior to each write); references ---
	http://www.open-std.org/Jtc1/sc22/wg21/docs/papers/2008/n2691.pdf
	27.8.1.4; http://www.opengroup.org/onlinepubs/7990989775/xsh/fopen.html;
	http://www.opengroup.org/onlinepubs/7990989775/xsh/open.html

	test/unit/fstream_test.cpp: add sample with fopen as reference point.

2008-07-14  Francois Dumont  <dums@users.sourceforge.net>

	* build/Makefiles/gmake: Build system updated for gcc under Cygwin,
	MinGW. Under Cygwin, with or without -mno-cygwin option, STLport
	is now a full replacement for libstdc++, building an application
	with it do not require -lsupc++ anymore as it is completely
	integrated in STLport. Under MinGW it didn't work resulting in a
	crash when starting an application using STLport so -lsupc++ is
	necessary both when linking STLport _and_ when linking the
	application using it.

2008-07-10  Francois Dumont  <dums@users.sourceforge.net>

	* src/num_put_float.cpp: Use an union based technique to find out
	the sign of floating point values. It will maybe replace use of
	platform specific functions in a future version.

	* src/stdio_streambuf.cpp, test/unit/iostream_test.cpp: Change
	behavior of stdio_istreambuf implementation that now always return 0 on
	showmanyc call. Returning -1 means that reading attempt will
	necessarily fail which is not the case, 0 is prefered as it means that
	we don't know. It is also similar to other std implementations like
	libstdc++.

2008-07-02  Francois Dumont  <dums@users.sourceforge.net>

	* configure.bat: After a very interesting debate the consesus
	is to put configure scripts in root folder.
