@@ -21,6 +21,13 @@
 #  include <stl/_prolog.h>
 #endif
 
+#  if defined (__GNUC__) && defined (__MINGW32__)
+/* Native cstdlib includes stdlib.h using an include_next so STLport stdlib.h
+ * is not used and the workaround in this file must be duplicated here
+ * (see stdlib.h). */
+#    include "errno.h"
+#  endif
+
 #if (_STLP_OUTERMOST_HEADER_ID == 0x116)
 #  ifndef _STLP_INTERNAL_CSTDLIB
 #    include <stl/_cstdlib.h>
